src/golden/functions/errors/test.golden/splitdefn.fl
	guarded x
		| True = "hello"
		| False = "goodbye"
